--- a/support/docs/CHANGELOG.txt
+++ b/support/docs/CHANGELOG.txt
@@ -6,6 +6,7 @@ Table Of Contents
 - Better Ship Part Snaps
     - Table Of Contents
 - Changelog
+    - v1.0.0
     - v0.4.0
     - v0.3.0
     - v0.2.0
@@ -14,6 +15,11 @@ Table Of Contents
 
 Changelog
 =========
+
+v1.0.0
+------
+- Integrated optional plugin "BetterShipPartSnaps-ReactorsGravDrives.esm" into main plugin
+- Ran plugin through Creation Kit for a sanity check
 
 v0.4.0
 ------
